feat(CU-86bxhq8xz): implement footer component markup and add styles

--- a/src/constants/styles/_fonts.scss
+++ b/src/constants/styles/_fonts.scss
@@ -50,6 +50,9 @@ $font-size_32: 32px;
 $font-size_33: 33px;
 $font-size_20: 20px;
 $font-size_25: 25px;
+$font-size_28: 28px;
+$font-size_24: 24px;
+$font-size_26: 26px;
 $font-size_76: 76px;
 $font-size_90: 90.36px;
 
