--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -10,6 +10,6 @@ button {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    width: 100vw;
+    // width: 100vw;
     background-color: $black_background;
 }
