--- a/src/components/AppTitle/AppTitle.scss
+++ b/src/components/AppTitle/AppTitle.scss
@@ -9,6 +9,14 @@
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     background: linear-gradient(225deg, #121212 0%, rgba(36, 121, 64, 0) 100%);
     padding-left: 57px;
+    /* background: linear-gradient(
+        252.93deg,
+        #121212 11.77%,
+        rgba(36, 121, 64, 0) 91.12%,
+        #121212 11.77%
+    ); */
+
+    background: linear-gradient(to right, #121212 0%, #247940 20%, #121212 100%);
 
     .app-title__about .about {
     }
