--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import "constants/styles/colors";
+
 *,
 *::before,
 *::after {
@@ -33,5 +35,6 @@ h6 {
 
 html,
 body {
-    height: 100%;
+    min-height: 100vh;
+    background-color: $black_background;
 }
