feat(CU-86bxhq8xz): implement CurrencyCard CurrencyQoutes components and add styles

--- a/src/constants/styles/_fonts.scss
+++ b/src/constants/styles/_fonts.scss
@@ -48,6 +48,7 @@
 
 $font-size_32: 32px;
 $font-size_33: 33px;
+$font-size_35: 35px;
 $font-size_20: 20px;
 $font-size_25: 25px;
 $font-size_28: 28px;
