--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -9,7 +9,7 @@ button {
 .app {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    // height: 100vh;
     // width: 100vw;
     background-color: $black_background;
 }
