--- a/src/components/AppTitle/AppTitle.scss
+++ b/src/components/AppTitle/AppTitle.scss
@@ -7,18 +7,12 @@
     display: flex;
     margin: 0px auto;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-    background: linear-gradient(225deg, #121212 0%, rgba(36, 121, 64, 0) 100%);
     padding-left: 57px;
-    /* background: linear-gradient(
-        252.93deg,
-        #121212 11.77%,
-        rgba(36, 121, 64, 0) 91.12%,
-        #121212 11.77%
-    ); */
-
-    background: linear-gradient(to right, #121212 0%, #247940 20%, #121212 100%);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    background: linear-gradient(225deg, #121212 0%, rgba(36, 121, 64, 0) 100%);
 
     .app-title__about .about {
+        box-shadow: 0px 3.16px 3.16px 0px rgba(0, 0, 0, 0.5);
     }
 
     .about__text {
@@ -30,7 +24,6 @@
         line-height: 46.77px;
 
         @include fonts.PoppinsLight;
-        // @include fonts.PoppinsSemiBoldFont;
         font-size: fonts.$font-size_25;
         color: colors.$color_grey;
     }
@@ -45,6 +38,7 @@
         padding-left: 342px;
         @include fonts.PoppinsSemiBoldFont;
         background: colors.$app_title_gradient;
+        background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         font-size: fonts.$font-size_90;
@@ -54,6 +48,7 @@
         padding-top: 32px;
         @include fonts.PoppinsSemiBoldFont;
         background: linear-gradient(to right, #00ce2c, #aedf23, #a3dc00);
+        background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         font-size: fonts.$font-size_76;
