--- a/src/components/LastUpdate/LastUpdate.scss
+++ b/src/components/LastUpdate/LastUpdate.scss
@@ -3,6 +3,8 @@
 @import "@/index.scss";
 
 .last-update {
+    margin: 0 auto;
+    margin-bottom: 56px;
     display: flex;
     align-items: center;
     column-gap: 18px;
