--- a/src/constants/styles/colors.scss
+++ b/src/constants/styles/colors.scss
@@ -5,3 +5,5 @@ $color_white: #ffffff;
 $color_grey: #d9d9d9;
 $color_grey_medium-opacity: #a7b2c3;
 $color_grey_hight-opacity: #898989;
+$currency_card_border: #474747;
+$currency_card_background: #202025;
