feat(CU-86bxjfnj0): add redux and implement switch theme

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -12,4 +12,8 @@ button {
     // height: 100vh;
     // width: 100vw;
     background-color: $black_background;
+
+    &.light-theme {
+        background-color: $white_background;
+    }
 }
