--- a/src/constants/styles/colors.scss
+++ b/src/constants/styles/colors.scss
@@ -1,4 +1,6 @@
 $black_background: #030304;
+$white_background: #d4cece;
+
 // $app_title_gradient: linear-gradient(90.18deg, #00ce2c 0.18%, #aedf23 49.3%, #a3dc00 99.88%);
 $app_title_gradient: linear-gradient(to right, #00ce2c, #aedf23, #a3dc00);
 $color_white: #ffffff;
