--- a/src/index.scss
+++ b/src/index.scss
@@ -36,5 +36,5 @@ h6 {
 html,
 body {
     min-height: 100vh;
-    background-color: $black_background;
+    // background-color: $black_background;
 }
