--- a/src/components/AppTitle/AppTitle.scss
+++ b/src/components/AppTitle/AppTitle.scss
@@ -9,7 +9,13 @@
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     padding-left: 57px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-    background: linear-gradient(225deg, #121212 0%, rgba(36, 121, 64, 0) 100%);
+    // background: linear-gradient(225deg, #121212 0%, rgba(36, 121, 64, 0) 100%);
+    background: linear-gradient(
+        45deg,
+        rgba(0, 0, 0, 0) 0%,
+        rgba(36, 121, 64, 1) 50%,
+        rgba(18, 18, 18, 1) 100%
+    );
 
     .app-title__about .about {
         box-shadow: 0px 3.16px 3.16px 0px rgba(0, 0, 0, 0.5);
