--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,10 +1,10 @@
 @use "../../constants/styles/fonts" as fonts;
 @import "../../constants/styles/colors";
 
-button {
+/*button {
     background: $black_background;
     @include fonts.PoppinsRegularFont;
-}
+}*/
 
 .app {
     display: flex;
