--- a/src/components/Header/ToggleTheme/ToggleTheme.scss
+++ b/src/components/Header/ToggleTheme/ToggleTheme.scss
@@ -10,6 +10,12 @@
     background-color: transparent;
     border-radius: 15px;
     overflow: hidden;
+    transition: all 1s;
+
+    &:hover {
+        opacity: 0.7;
+        cursor: pointer;
+    }
 
     input[type="checkbox"] {
         display: none;
