--- a/src/constants/styles/_fonts.scss
+++ b/src/constants/styles/_fonts.scss
@@ -46,6 +46,8 @@
     font-family: "Poppins";
 }
 
+$font-size_10: 10px;
+$font-size_15: 15px;
 $font-size_32: 32px;
 $font-size_33: 33px;
 $font-size_35: 35px;
