--- a/src/constants/styles/_fonts.scss
+++ b/src/constants/styles/_fonts.scss
@@ -47,15 +47,21 @@
 }
 
 $font-size_10: 10px;
+$font-size_12: 12px;
+$font-size_13: 13px;
 $font-size_15: 15px;
+$font-size_18: 18px;
 $font-size_32: 32px;
 $font-size_33: 33px;
 $font-size_35: 35px;
+$font-size_38: 38px;
+$font-size_45: 45px;
 $font-size_20: 20px;
 $font-size_25: 25px;
 $font-size_28: 28px;
 $font-size_24: 24px;
 $font-size_26: 26px;
+$font-size_60: 60px;
 $font-size_76: 76px;
 $font-size_90: 90.36px;
 
