--- a/src/components/CurrencyQoutes/CurrencyQoutes.scss
+++ b/src/components/CurrencyQoutes/CurrencyQoutes.scss
@@ -1,11 +1,15 @@
 @use "@/constants/styles/fonts" as fonts;
 @use "@/constants/styles/colors" as colors;
-@import "@/index.scss";
 
 .quotes__container {
-    margin: 0 auto;
     max-width: 1224px;
-    margin-bottom: 112px;
+    margin-bottom: 96px;
+    //margin: 0 auto 112px;
+    //margin-bottom: 112px;
+
+    @media (max-width: 500px) {
+        margin-bottom: 151px;
+    }
 
     .quotes__title {
         margin-bottom: 24px;
@@ -13,20 +17,60 @@
         color: colors.$color_white;
         font-size: fonts.$font-size_32;
         line-height: 41.14px;
+
+        @media (max-width: 768px) {
+            margin-bottom: 12px;
+            font-size: fonts.$font-size_24;
+            line-height: 22px;
+        }
+
+        @media (max-width: 500px) {
+            margin-bottom: 12px;
+            font-size: fonts.$font-size_18;
+            line-height: 17px;
+        }
+
+        @media (max-width: 450px) {
+            margin-bottom: 7px;
+            font-size: fonts.$font-size_12;
+            line-height: 15px;
+        }
     }
 
     .title__border {
         margin-bottom: 50px;
-
         background-color: colors.$currency_card_border;
         height: 2px;
         width: 520px;
+
+        @media (max-width: 1120px) {
+            margin-bottom: 35px;
+            width: 100%;
+        }
+
+        @media (max-width: 500px) {
+            margin-bottom: 16px;
+            width: 100%;
+        }
     }
 
     .quotes__items {
         display: flex;
-        column-gap: 184px;
+        //column-gap: 184px;
+        justify-content: space-between;
         row-gap: 56px;
         flex-wrap: wrap;
+
+        @media (max-width: 1120px) {
+            display: flex;
+            flex-direction: column;
+            row-gap: 25px;
+        }
+
+        @media (max-width: 768px) {
+            display: flex;
+            flex-direction: column;
+            row-gap: 16px;
+        }
     }
 }
