--- a/src/components/CurrencyStocks/CurrencyStocks.scss
+++ b/src/components/CurrencyStocks/CurrencyStocks.scss
@@ -3,30 +3,75 @@
 @import "@/index.scss";
 
 .stocks__container {
-    margin: 0 auto;
-    margin-bottom: 86px;
-    max-width: 1224px;
-    .stocks__title {
-        margin-bottom: 24px;
+  max-width: 1224px;
+  //margin: 0 auto 86px;
+  margin-bottom: 86px;
 
-        @include fonts.PoppinsLight;
-        color: colors.$color_white;
-        font-size: fonts.$font-size_32;
-        line-height: 41.14px;
-        // border-bottom: 2px solid colors.$currency_card_border;
-        // border-bottom-width: 520px;
+  @media (max-width: 500px) {
+    margin-bottom: 32px;
+  }
+
+  .stocks__title {
+    margin-bottom: 24px;
+
+    @include fonts.PoppinsLight;
+    color: colors.$color_white;
+    font-size: fonts.$font-size_32;
+    line-height: 41.14px;
+
+    @media (max-width: 768px) {
+      margin-bottom: 12px;
+      font-size: fonts.$font-size_24;
+      line-height: 22px;
     }
 
-    .title__border {
-        margin-bottom: 50px;
-        background-color: colors.$currency_card_border;
-        height: 2px;
-        width: 520px;
+    @media (max-width: 500px) {
+      margin-bottom: 12px;
+      font-size: fonts.$font-size_18;
+      line-height: 17px;
     }
 
-    .stocks__items {
-        display: flex;
-        column-gap: 184px;
-        flex-wrap: wrap;
+    @media (max-width: 450px) {
+      margin-bottom: 7px;
+      font-size: fonts.$font-size_12;
+      line-height: 15px;
     }
+  }
+
+  .title__border {
+    margin-bottom: 50px;
+    background-color: colors.$currency_card_border;
+    height: 2px;
+    width: 520px;
+
+    @media (max-width: 1120px) {
+      margin-bottom: 35px;
+      width: 100%;
+    }
+
+    @media (max-width: 500px) {
+      margin-bottom: 16px;
+      width: 100%;
+    }
+  }
+
+  .stocks__items {
+    display: flex;
+    //column-gap: 184px;
+    justify-content: space-between;
+    row-gap: 56px;
+    flex-wrap: wrap;
+
+    @media (max-width: 1120px) {
+      display: flex;
+      flex-direction: column;
+      row-gap: 30px;
+    }
+
+    @media (max-width: 768px) {
+      display: flex;
+      flex-direction: column;
+      row-gap: 20px;
+    }
+  }
 }
