--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,76 +3,134 @@
 @import "@/index.scss";
 
 .footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 54px;
+  // margin-bottom: 40px;
+
+  .footer__main-block {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 54px;
-    // margin-bottom: 40px;
+    justify-content: space-between;
+    column-gap: 105px;
+    width: 100%;
+    margin: 0 auto;
 
-    .footer__main-block {
+    @media (max-width: 1180px) {
+      flex-direction: column;
+      align-items: center;
+      row-gap: 20px;
+    }
+
+    .footer__info {
+      .footer__info-title {
         display: flex;
-        column-gap: 105px;
-        width: 1216px;
-        margin: 0 auto;
+        column-gap: 16px;
 
-        .footer__info {
-            .footer__info-title {
-                display: flex;
-                column-gap: 16px;
-
-                .info-title__text {
-                    padding-top: 7px;
-                    @include fonts.PoppinsSemiBoldFont;
-                    font-size: fonts.$font-size_26;
-                    background: colors.$app_title_gradient;
-                    -webkit-background-clip: text;
-                    -webkit-text-fill-color: transparent;
-                    line-height: 41.14px;
-                }
-            }
-
-            .footer__info-text {
-                width: 482px;
-                padding-top: 19px;
-                @include fonts.PoppinsLight;
-                font-size: fonts.$font-size_24;
-                color: colors.$color_white;
-                line-height: 41.14px;
-            }
+        @media (max-width: 900px) {
+          justify-content: center;
         }
 
-        .footer__links {
-            display: flex;
-            column-gap: 79px;
 
-            .links__nav {
-                display: flex;
-                flex-direction: column;
+        .info-title__text {
+          padding-top: 7px;
+          @include fonts.PoppinsSemiBoldFont;
+          font-size: fonts.$font-size_26;
+          background: colors.$app_title_gradient;
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          line-height: 41.14px;
 
-                .nav__item:first-child {
-                    @include fonts.PoppinsRegularFont;
-                    font-size: fonts.$font-size_28;
-                    color: colors.$color_white;
-                    line-height: 42px;
-                    margin-bottom: 40px;
-                }
-
-                .nav__item {
-                    @include fonts.PoppinsRegularFont;
-                    font-size: fonts.$font-size_24;
-                    color: colors.$color_grey_hight-opacity;
-                    line-height: 36px;
-                    margin-bottom: 17px;
-                }
-            }
+          @media (max-width: 530px) {
+            font-size: fonts.$font-size_20;
+            line-height: 22px;
+          }
         }
-    }
+      }
 
-    .footer__copyright {
-        @include fonts.InterRegularFont;
+      .footer__info-text {
+        width: 482px;
+        padding-top: 19px;
+        @include fonts.PoppinsLight;
         font-size: fonts.$font-size_24;
-        color: colors.$color_grey_hight-opacity;
+        color: colors.$color_white;
         line-height: 36px;
-        padding-bottom: 36px;
+
+        @media (max-width: 900px) {
+          line-height: 30px;
+          font-size: fonts.$font-size_20;
+          text-align: center;
+        }
+
+        @media (max-width: 530px) {
+          width: 100%;
+          font-size: fonts.$font-size_15;
+        }
+      }
     }
+
+    .footer__links {
+      display: flex;
+      column-gap: 79px;
+
+      @media (max-width: 560px) {
+        column-gap: 50px;
+      }
+
+      .links__nav {
+        display: flex;
+        flex-direction: column;
+
+        .nav__item:first-child {
+          @include fonts.PoppinsRegularFont;
+          font-size: fonts.$font-size_28;
+          color: colors.$color_white;
+          line-height: 42px;
+          margin-bottom: 40px;
+
+          @media (max-width: 900px) {
+            margin-bottom: 20px;
+            font-size: fonts.$font-size_20;
+          }
+
+          @media (max-width: 500px) {
+            margin-bottom: 12px;
+            font-size: fonts.$font-size_15;
+            line-height: 15px;
+          }
+        }
+
+        .nav__item {
+          @include fonts.PoppinsRegularFont;
+          font-size: fonts.$font-size_24;
+          color: colors.$color_grey_hight-opacity;
+          line-height: 36px;
+          margin-bottom: 17px;
+
+          @media (max-width: 900px) {
+            margin-bottom: 12px;
+            font-size: fonts.$font-size_18;
+          }
+
+          @media (max-width: 500px) {
+            margin-bottom: 12px;
+            font-size: fonts.$font-size_15;
+            line-height: 13px;
+          }
+        }
+      }
+    }
+  }
+
+  .footer__copyright {
+    @include fonts.InterRegularFont;
+    font-size: fonts.$font-size_24;
+    color: colors.$color_grey_hight-opacity;
+    line-height: 36px;
+    padding-bottom: 36px;
+
+    @media (max-width: 900px) {
+      font-size: fonts.$font-size_18;
+    }
+  }
 }
