--- a/src/components/LastUpdate/LastUpdate.scss
+++ b/src/components/LastUpdate/LastUpdate.scss
@@ -1,10 +1,8 @@
 @use "@/constants/styles/fonts" as fonts;
 @use "@/constants/styles/colors" as colors;
-@import "@/index.scss";
 
 .last-update {
-    margin: 0 auto;
-    margin-bottom: 56px;
+    margin: 0 auto 56px;
     display: flex;
     align-items: center;
     column-gap: 18px;
@@ -14,5 +12,13 @@
         font-size: fonts.$font-size_33;
         color: colors.$color_grey;
         line-height: 41.14px;
+
+        @media (max-width: 768px) {
+            font-size: fonts.$font-size_25;
+        }
+
+        @media (max-width: 450px) {
+            font-size: fonts.$font-size_12;
+        }
     }
 }
