--- a/src/components/ModalWindow/ModalWindow.scss
+++ b/src/components/ModalWindow/ModalWindow.scss
@@ -17,20 +17,50 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    //justify-content: center;
     position: relative;
     background-color: colors.$modal_background;
     margin: 10% auto;
-    height: 45%;
-    width: 50%;
+    height: 47%;
+    width: 30%;
     padding: 10px;
     border-radius: 10px;
+
+    @media (max-width: 1440px) {
+      width: 50%;
+    }
+
+    @media (max-width: 1220px) {
+      margin: 15% auto;
+      width: 50%;
+    }
+
+    @media (max-width: 930px) {
+      margin: 20% auto;
+      height: 42%;
+    }
+
+    @media (max-width: 768px) {
+      height: 36%;
+    }
+
+    @media (max-width: 560px) {
+      margin: 25% auto;
+      width: 60%;
+    }
 
     .modal__title {
       @include fonts.PoppinsLight;
       color: colors.$color_grey_medium-opacity;
       font-size: fonts.$font-size_32;
       margin-bottom: 30px;
+
+      @media (max-width: 930px) {
+        font-size: fonts.$font-size_25;
+      }
+
+      @media (max-width: 768px) {
+        font-size: fonts.$font-size_20;
+      }
 
       .modal__selected-currency {
         display: flex;
@@ -50,6 +80,14 @@
         color: colors.$color_grey_medium-opacity;
         font-size: fonts.$font-size_24;
         align-self: end;
+
+        @media (max-width: 930px) {
+          font-size: fonts.$font-size_18;
+        }
+
+        @media (max-width: 768px) {
+          font-size: fonts.$font-size_15;
+        }
       }
     }
 
