--- a/src/index.scss
+++ b/src/index.scss
@@ -60,10 +60,41 @@ body {
     margin: 0 auto;
     padding-left: 16px;
     padding-right: 16px;
-    max-width: 1419px;
+    max-width: 1440px;
+    width: 100%;
+
 
     @media (max-width: 490px) {
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 0px;
+        padding-right: 0px;
     }
 }
+
+.main-block__container {
+    margin: 0 auto;
+    padding-left: 16px;
+    padding-right: 16px;
+    max-width: 1224px;
+    width: 100%;
+
+
+    @media (max-width: 490px) {
+        padding-left: 25px;
+        padding-right: 25px;
+    }
+}
+
+.footer__container {
+    margin: 0 auto;
+    padding-left: 16px;
+    padding-right: 16px;
+    max-width: 1224px;
+    width: 100%;
+
+
+    @media (max-width: 490px) {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+}
+
