fix(CU-#86bxm7aad): fix modal converter structure and styles

--- a/src/components/SelectCurrency/SelectCurrency.scss
+++ b/src/components/SelectCurrency/SelectCurrency.scss
@@ -24,6 +24,14 @@ select{
     font-size: fonts.$font-size_15;
   }
 
+  @media (max-width: 420px) {
+    font-size: fonts.$font-size_12;
+  }
+
+  @media (max-width: 320px) {
+    font-size: fonts.$font-size_10;
+  }
+
   .select__item{
     &:hover{
       cursor: pointer;
