feat(CU-#86bxm7aad): migrate components for TimelinePage to class components

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,5 +1,6 @@
 @use "../../constants/styles/fonts" as fonts;
 @import "../../constants/styles/colors";
+@import "@/index";
 
 .app {
     display: flex;
