--- a/src/components/pages/TimelinePage/MainComponent/MainComponent.scss
+++ b/src/components/pages/TimelinePage/MainComponent/MainComponent.scss
@@ -1,6 +1,6 @@
 @use "@/constants/styles/fonts" as fonts;
 @use "@/constants/styles/colors" as colors;
-@import "@/index.scss";
+//@import "@/index.scss";
 
 .main-block {
     display: flex;
