--- a/src/index.scss
+++ b/src/index.scss
@@ -101,6 +101,7 @@ body {
 }
 
 .currency-chart__container {
+    position: relative;
     padding-left: 16px;
     padding-right: 16px;
     max-width: 1205px;
@@ -112,6 +113,8 @@ body {
         padding-left: 16px;
         padding-right: 16px;
     }
+
+
 }
 
 a {
