--- a/src/constants/styles/colors.scss
+++ b/src/constants/styles/colors.scss
@@ -5,6 +5,7 @@ $modal_background: #6f6060;
 // $app_title_gradient: linear-gradient(90.18deg, #00ce2c 0.18%, #aedf23 49.3%, #a3dc00 99.88%);
 $app_title_gradient: linear-gradient(to right, #00ce2c, #aedf23, #a3dc00);
 $color_white: #ffffff;
+$color_green: #00ce2c;
 $color_grey: #d9d9d9;
 $color_grey_medium-opacity: #a7b2c3;
 $color_grey_hight-opacity: #898989;
