--- a/src/components/pages/TimelinePage/ChartDate/ChartDate.scss
+++ b/src/components/pages/TimelinePage/ChartDate/ChartDate.scss
@@ -1,23 +1,33 @@
 @use "@/constants/styles/fonts" as fonts;
 @use "@/constants/styles/colors" as colors;
 
-.currency-chart__date-from-container {
-  display: flex;
+//.currency-chart__date-from-container {
+  /*display: flex;
   column-gap: 20px;
+  align-self: start;
+  margin-left: 20px;
+  margin-bottom: 30px;*/
 
-  .currency-chart__date-from {
+  .currency-chart__date {
     display: flex;
     align-items: center;
     column-gap: 10px;
+    align-self: start;
+    margin-left: 20px;
+    margin-bottom: 30px;
     //input[type="date"]
 
     .currency-chart__date-title{
       @include fonts.PoppinsLight;
       font-size: fonts.$font-size_25;
       color: colors.$color_white;
+
+      @media (max-width: 900px) {
+        font-size: fonts.$font-size_15;
+      }
     }
 
-    .currency-chart__date {
+    .currency-chart__date-input {
       //background-color: colors.$black_background;
       background-color: colors.$black_background;
       //background-color: #0080ff;
@@ -26,11 +36,24 @@
       @include fonts.PoppinsLight;
       font-size: fonts.$font-size_20;
       color: colors.$color_white;
-      border: 1px solid colors.$color_white;
+
+      @media (min-width: 768px) {
+        border: 1px solid colors.$color_white;
+      }
+
+      //border: 1px solid colors.$color_white;
       //border: none;
       outline: none;
       border-radius: 5px;
       cursor: pointer;
+
+      @media (max-width: 900px) {
+        font-size: fonts.$font-size_13;
+      }
+
+      @media (max-width: 768px) {
+        font-size: fonts.$font-size_12;
+      }
     }
   }
-}
+//}
