--- a/src/constants/styles/_fonts.scss
+++ b/src/constants/styles/_fonts.scss
@@ -50,6 +50,7 @@ $font-size_10: 10px;
 $font-size_12: 12px;
 $font-size_13: 13px;
 $font-size_15: 15px;
+$font-size_16: 16px;
 $font-size_18: 18px;
 $font-size_30: 30px;
 $font-size_32: 32px;
