--- a/src/constants/styles/colors.scss
+++ b/src/constants/styles/colors.scss
@@ -7,6 +7,8 @@ $app_title_gradient: linear-gradient(to right, #00ce2c, #aedf23, #a3dc00);
 $color_white: #ffffff;
 $color_green: #00ce2c;
 $color_grey: #d9d9d9;
+$color_grey__input-background: #1B2028;
+$color_grey__input-placeholder: #9E9E9E;
 $color_grey_medium-opacity: #a7b2c3;
 $color_grey_hight-opacity: #898989;
 $currency_card_border: #474747;
