--- a/src/components/pages/HomePage/Header/Header.scss
+++ b/src/components/pages/HomePage/Header/Header.scss
@@ -28,11 +28,14 @@
   //width: 657px;
   min-width: 52%;
   //display: flex;
+  display: flex;
+  justify-content: space-around;
+  column-gap: 20px;
 
-  .navigation-list {
-    display: flex;
+  //.navigation-list {
+    /*display: flex;
     justify-content: space-around;
-    column-gap: 20px;
+    column-gap: 20px;*/
 
     /*a {
       transition: all .1s ease-in;
@@ -77,7 +80,24 @@
         font-size: fonts.$font-size_10;
       }
     }
-  }
+
+    .navigation-list__item__active {
+      @include fonts.PoppinsLight;
+      color: colors.$color_green;
+      font-size: fonts.$font-size_20;
+      white-space: nowrap;
+      border-bottom: 1px solid colors.$color_green;
+
+
+      @media (max-width: 860px) {
+        font-size: fonts.$font-size_15;
+      }
+
+      @media (max-width: 430px) {
+        font-size: fonts.$font-size_10;
+      }
+    }
+  //}
 }
 
 .theme-button {
