--- a/src/components/pages/HomePage/ModalWindow/ModalWindow.scss
+++ b/src/components/pages/HomePage/ModalWindow/ModalWindow.scss
@@ -20,18 +20,18 @@
     position: relative;
     background-color: colors.$modal_background;
     margin: 10vh auto;
-    height: 70vh;
+    //height: 70vh;
     width: 30%;
     border-radius: 10px;
 
-    @media (max-width: 1440px) {
-      width: 50%;
-    }
+    //@media (max-width: 1440px) {
+    //  width: 50%;
+    //}
 
     @media (max-width: 1220px) {
       margin: 8vh auto;
       width: 50%;
-      height: 75vh;
+      //height: 75vh;
     }
 
     @media (max-width: 930px) {
@@ -41,7 +41,7 @@
 
     @media (max-width: 768px) {
       //height: 36%;
-      height: 75vh;
+      //height: 75vh;
     }
 
     @media (max-width: 560px) {
@@ -50,7 +50,7 @@
     }
 
     @media (max-width: 420px) {
-      height: 55vh;
+      //height: 55vh;
     }
 
     .modal__title {
@@ -121,6 +121,7 @@
       border: 3px solid colors.$color_grey_medium-opacity;
       border-radius: 10px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      margin-bottom: 20px;
 
 
       .currency__result {
