--- a/src/components/pages/TimelinePage/CustomToast/CustomToast.scss
+++ b/src/components/pages/TimelinePage/CustomToast/CustomToast.scss
@@ -3,28 +3,36 @@
 
 .toast {
   position: fixed;
-  top: 10%;
-  right: -6%;
-  transform: translateX(-50%);
+  top: 2%;
+  right: 45%;
+  //transform: translateX(-10%);
   color: #fff;
   padding: 10px 20px;
   border-radius: 5px;
   opacity: 0;
   //transition: opacity 0.5s ease;
-  width: 250px;
+  width: 150px;
   //height: 100px;
   background: #00BC4F;
   overflow: hidden;
+  text-align: center;
+
+  //@media (max-width: 768px) {
+  //  width: 100px;
+  //}
 
   .toast-content {
     @include fonts.PoppinsLight;
     color: colors.$color_white;
-    font-size: fonts.$font-size_20;
+    font-size: fonts.$font-size_15;
+
+    @media (max-width: 768px) {
+      font-size: fonts.$font-size_12;
+    }
   }
 
   &.show {
     opacity: 1;
-    //animation: fadeIn 0.5s ease-in-out forwards;
   }
 
   &.hide {
@@ -33,28 +41,4 @@
   }
 }
 
-//@keyframes fadeIn {
-//  from {
-//    opacity: 0;
-//    transform: translateY(20px);
-//  }
-//  to {
-//    opacity: 1;
-//    transform: translateY(0);
-//  }
-//}
-//
-//@keyframes fadeOut {
-//  from {
-//    opacity: 1;
-//    transform: translateY(0);
-//  }
-//  to {
-//    opacity: 0;
-//    transform: translateY(20px);
-//  }
-//}
-//
-//.toast.hide {
-//  overflow: hidden;
-//}
+
