--- a/src/components/pages/TimelinePage/Loader/Loader.scss
+++ b/src/components/pages/TimelinePage/Loader/Loader.scss
@@ -2,15 +2,21 @@
 @use "@/constants/styles/colors" as colors;
 
 .loader__container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
-  top: 200%;
-  right: 46%;
+  top: 0%;
+  right: 0%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   padding-top: 30px;
   padding-bottom: 60px;
   align-items: center;
+  background-color: rgba(255, 255, 255, 0.7);
 
   .loader__title {
     font-size: 20px;
