--- a/src/constants/styles/colors.scss
+++ b/src/constants/styles/colors.scss
@@ -8,6 +8,7 @@ $color_white: #ffffff;
 $color_green: #00ce2c;
 $color_grey: #d9d9d9;
 $color_grey__input-background: #1B2028;
+$color_grey__input-hover: #464c56;
 $color_grey__input-placeholder: #9E9E9E;
 $color_grey_medium-opacity: #a7b2c3;
 $color_grey_hight-opacity: #898989;
