--- a/src/constants/styles/colors.scss
+++ b/src/constants/styles/colors.scss
@@ -14,3 +14,5 @@ $color_grey_medium-opacity: #a7b2c3;
 $color_grey_hight-opacity: #898989;
 $currency_card_border: #474747;
 $currency_card_background: #202025;
+$currency-card_background__light: #649e6754;
+$footer-links__border-color: #607D94;
