--- a/src/components/pages/HomePage/AppTitle/AppTitle.scss
+++ b/src/components/pages/HomePage/AppTitle/AppTitle.scss
@@ -36,14 +36,12 @@
             flex-direction: column;
             align-items: center;
         }
-        //box-shadow: 0px 3.16px 3.16px 0px rgba(0, 0, 0, 0.5);
     }
 
     .about__text {
-        width: 397px;
-        //height: 97px;
+        //width: 397px;
+        max-width: 397px;
         text-align: center;
-        //margin-left: 356px;
         margin-bottom: 58px;
         line-height: 46.77px;
 
@@ -73,7 +71,6 @@
     display: flex;
     flex-direction: column;
     align-items: end;
-    //margin-right: 64px;
 
     @media (max-width: 1168px) {
         display: flex;
@@ -85,10 +82,8 @@
         display: flex;
         flex-direction: column;
         align-items: end;
-        //padding-left: 342px;
         padding-right: 64px;
         white-space: nowrap;
-        //padding-right: 74px;
 
         @include fonts.PoppinsSemiBoldFont;
         background: colors.$app_title_gradient;
@@ -107,7 +102,7 @@
         }
 
         @media (max-width: 590px) {
-            font-size: fonts.$font-size_38;
+            font-size: fonts.$font-size_33;
         }
     }
 
@@ -132,7 +127,7 @@
         }
 
         @media (max-width: 590px) {
-            font-size: fonts.$font-size_38;
+            font-size: fonts.$font-size_30;
         }
     }
 }
