--- a/src/index.scss
+++ b/src/index.scss
@@ -100,25 +100,6 @@ body {
   }
 }
 
-.currency-chart__container {
-  position: relative;
-  padding-left: 16px;
-  padding-right: 16px;
-  max-width: 1205px;
-  width: 100%;
-  margin: 0 auto 604px;
-
-  @media (max-width: 1200px) {
-    margin: 0 auto 150px;
-  }
-
-
-  @media (max-width: 490px) {
-    padding-left: 16px;
-    padding-right: 16px;
-  }
-}
-
 a {
   transition: all .1s ease-in;
 }
@@ -126,7 +107,7 @@ a {
 a:hover {
   opacity: .7;
   transform: scale(1.1);
-  border-bottom: 1px solid colors.$color_grey;
+  //border-bottom: 1px solid colors.$color_grey;
 }
 
 a:active {
