feat(CU-#86bxpqxdr): add new logic for map building with real banks data

--- a/src/components/pages/BankCard/MapController/MapController.scss
+++ b/src/components/pages/BankCard/MapController/MapController.scss
@@ -2,191 +2,228 @@
 @use "@/constants/styles/colors" as colors;
 
 .map__container {
-  height: 460px;
-  width: 100%;
-  margin-bottom: 700px;
-
-  @media (max-width: 768px) {
-    margin-bottom: 300px;
-  }
-
-  @media (max-width: 768px) {
-    height: 300px;
-  }
-
-  @media (max-width: 500px) {
-    height: 250px;
-    margin-bottom: 150px;
-  }
-
-  .marker {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    cursor: pointer;
-  }
-
-  .mapboxgl-popup {
-    max-width: 200px;
-  }
-
-  .mapboxgl-popup-content {
-    display: flex;
-    text-align: center;
-    @include fonts.PoppinsSemiBoldFont;
-    flex-direction: column;
-    align-items: center;
-
-    h2 {
-
-      font-size: fonts.$font-size_15;
-      color: colors.$black_background;
-    }
-
-  }
-}
-
-
-.currency-form__container {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  //margin-bottom: 80px;
-
-  .currency-input__title {
-    @include fonts.PoppinsLight;
-    font-size: fonts.$font-size_38;
-    color: colors.$color_white;
-    margin-bottom: 24px;
-
-    @media (max-width: 768px) {
-      font-size: fonts.$font-size_30;
-    }
-
-    @media (max-width: 600px) {
-      font-size: fonts.$font-size_25;
-    }
-
-    @media (max-width: 500px) {
-      font-size: fonts.$font-size_18;
-    }
-  }
-
-  .currency-input__container {
     position: relative;
 
-    .currency-input__input {
-      @include fonts.PoppinsLight;
-      font-size: fonts.$font-size_28;
-      color: colors.$color_white;
-      padding: 20px;
-      width: 450px;
-      height: 66px;
-      background: colors.$color_grey__input-background;
-      outline: none;
-      border-radius: 8px;
+    .map {
+        height: 460px;
+        width: 100%;
+        margin-bottom: 700px;
 
-      &::placeholder {
-        @include fonts.PoppinsLight;
-        font-size: fonts.$font-size_18;
-        color: colors.$color_grey__input-placeholder;
-      }
-
-      @media (max-width: 700px) {
-        width: 300px;
-        height: 50px;
-        font-size: fonts.$font-size_20;
-      }
-
-      @media (max-width: 500px) {
-        width: 250px;
-        height: 50px;
-        font-size: fonts.$font-size_15;
-
-        &::placeholder {
-          font-size: fonts.$font-size_15;
-        }
-      }
-    }
-
-    .currency-input__result {
-      display: flex;
-      flex-direction: column;
-      top: 115%;
-      background: colors.$color_grey__input-background;
-      position: absolute;
-      z-index: 2;
-      width: 100%;
-      border-radius: 8px;
-
-
-
-      .currency-input__result-item {
-        padding: 20px 5px 10px 10px;
-        //background: transparent;
-        background: colors.$color_grey__input-background;
-        text-align: start;
-        @include fonts.PoppinsLight;
-        font-size: fonts.$font-size_28;
-        color: colors.$color_white;
-        border-bottom: 1px solid;
-        cursor: pointer;
-        transition: all 1s ease-in;
-
-        &:hover {
-          //opacity: .5;
-          background: colors.$color_grey__input-hover;
+        @media (max-width: 768px) {
+            margin-bottom: 300px;
         }
 
-        @media (max-width: 700px) {
-          width: 300px;
-          font-size: fonts.$font-size_20;
+        @media (max-width: 768px) {
+            height: 300px;
         }
 
         @media (max-width: 500px) {
-          width: 250px;
-          font-size: fonts.$font-size_15;
+            height: 250px;
+            margin-bottom: 150px;
         }
-      }
+
+        .marker {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+
+        .mapboxgl-popup {
+            max-width: 200px;
+        }
+
+        .mapboxgl-popup-content {
+            display: flex;
+            text-align: center;
+            @include fonts.PoppinsSemiBoldFont;
+            flex-direction: column;
+            align-items: center;
+
+            h2 {
+                font-size: fonts.$font-size_15;
+                color: colors.$black_background;
+            }
+        }
     }
 
+    .map__button {
+        width: 50px;
+        height: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        z-index: 2;
+        font-size: fonts.$font-size_10;
+        background-color: colors.$color_blue;
+        color: colors.$color_white;
+        cursor: pointer;
+        transition: all 0.4s ease-in;
 
-  }
-
-
-  .currency-input__icon {
-    position: absolute;
-    top: 33%;
-    right: 5%;
-    width: 20px;
-    height: 20px;
-    //color: #9E9E9E;
-    background: transparent;
-
-    @media (max-width: 700px) {
-      width: 20px;
-      height: 20px;
+        &:hover {
+            transform: scale(1.1);
+        }
     }
+}
 
-    @media (max-width: 500px) {
-      width: 20px;
-      height: 20px;
-    }
-  }
-
-  .currency-form__selected-currency {
-    align-self: end;
+.currency-form__container {
+    position: relative;
     display: flex;
-    align-items: end;
-    padding-right: 20px;
-    height: 80px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-    .selected-currency-title {
-      @include fonts.PoppinsLight;
-      font-size: fonts.$font-size_20;
-      color: colors.$color_white;
+    .currency-input__title {
+        @include fonts.PoppinsLight;
+        font-size: fonts.$font-size_38;
+        color: colors.$color_white;
+        margin-bottom: 24px;
+
+        @media (max-width: 768px) {
+            font-size: fonts.$font-size_30;
+        }
+
+        @media (max-width: 600px) {
+            font-size: fonts.$font-size_25;
+        }
+
+        @media (max-width: 500px) {
+            font-size: fonts.$font-size_18;
+        }
     }
-  }
+
+    .currency-input__container {
+        position: relative;
+
+        .currency-input__input {
+            @include fonts.PoppinsLight;
+            font-size: fonts.$font-size_28;
+            color: colors.$color_white;
+            padding: 20px;
+            width: 450px;
+            height: 66px;
+            background: colors.$color_grey__input-background;
+            outline: none;
+            border-radius: 8px;
+
+            &::placeholder {
+                @include fonts.PoppinsLight;
+                font-size: fonts.$font-size_18;
+                color: colors.$color_grey__input-placeholder;
+            }
+
+            @media (max-width: 700px) {
+                width: 300px;
+                height: 50px;
+                font-size: fonts.$font-size_20;
+            }
+
+            @media (max-width: 500px) {
+                width: 250px;
+                height: 50px;
+                font-size: fonts.$font-size_15;
+
+                &::placeholder {
+                    font-size: fonts.$font-size_15;
+                }
+            }
+        }
+
+        .currency-input__result {
+            display: flex;
+            flex-direction: column;
+            top: 115%;
+            background: colors.$color_grey__input-background;
+            position: absolute;
+            z-index: 2;
+            width: 100%;
+            border-radius: 8px;
+
+            .currency-input__result-item {
+                padding: 20px 5px 10px 10px;
+                //background: transparent;
+                background: colors.$color_grey__input-background;
+                text-align: start;
+                @include fonts.PoppinsLight;
+                font-size: fonts.$font-size_28;
+                color: colors.$color_white;
+                border-bottom: 1px solid;
+                cursor: pointer;
+                transition: all 1s ease-in;
+
+                &:hover {
+                    //opacity: .5;
+                    background: colors.$color_grey__input-hover;
+                }
+
+                @media (max-width: 700px) {
+                    width: 300px;
+                    font-size: fonts.$font-size_20;
+                }
+
+                @media (max-width: 500px) {
+                    width: 250px;
+                    font-size: fonts.$font-size_15;
+                }
+            }
+        }
+    }
+
+    .currency-input__icon {
+        position: absolute;
+        top: 33%;
+        right: 5%;
+        width: 20px;
+        height: 20px;
+        //color: #9E9E9E;
+        background: transparent;
+
+        @media (max-width: 700px) {
+            width: 20px;
+            height: 20px;
+        }
+
+        @media (max-width: 500px) {
+            width: 20px;
+            height: 20px;
+        }
+    }
+
+    .currency-form__selected-currency {
+        align-self: end;
+        display: flex;
+        align-items: end;
+        padding-right: 20px;
+        height: 80px;
+
+        .selected-currency__container {
+            display: flex;
+            align-items: center;
+            column-gap: 20px;
+
+            .selected-currency-title {
+                @include fonts.PoppinsLight;
+                font-size: fonts.$font-size_20;
+                color: colors.$color_white;
+            }
+
+            .selected-currency__reset-button {
+                padding: 5px;
+                background: transparent;
+                color: colors.$color_white;
+                @include fonts.PoppinsLight;
+                font-size: fonts.$font-size_15;
+                border: 1px solid colors.$color_white;
+                transition: all 1s;
+                max-width: 200px;
+                margin-bottom: 1px;
+
+                &:hover {
+                    cursor: pointer;
+                    transform: scale(1.05);
+                }
+            }
+        }
+    }
 }
