--- a/src/constants/styles/colors.scss
+++ b/src/constants/styles/colors.scss
@@ -2,17 +2,17 @@ $black_background: #030304;
 $white_background: #d4cece;
 $modal_background: #6f6060;
 
-// $app_title_gradient: linear-gradient(90.18deg, #00ce2c 0.18%, #aedf23 49.3%, #a3dc00 99.88%);
 $app_title_gradient: linear-gradient(to right, #00ce2c, #aedf23, #a3dc00);
 $color_white: #ffffff;
+$color_blue: #03a9f494;
 $color_green: #00ce2c;
 $color_grey: #d9d9d9;
-$color_grey__input-background: #1B2028;
+$color_grey__input-background: #1b2028;
 $color_grey__input-hover: #464c56;
-$color_grey__input-placeholder: #9E9E9E;
+$color_grey__input-placeholder: #9e9e9e;
 $color_grey_medium-opacity: #a7b2c3;
 $color_grey_hight-opacity: #898989;
 $currency_card_border: #474747;
 $currency_card_background: #202025;
 $currency-card_background__light: #649e6754;
-$footer-links__border-color: #607D94;
+$footer-links__border-color: #607d94;
