--- a/src/components/pages/TimelinePage/CustomToast/CustomToast.scss
+++ b/src/components/pages/TimelinePage/CustomToast/CustomToast.scss
@@ -2,43 +2,29 @@
 @use "@/constants/styles/colors" as colors;
 
 .toast {
-  position: fixed;
-  top: 2%;
-  right: 45%;
-  //transform: translateX(-10%);
-  color: #fff;
-  padding: 10px 20px;
-  border-radius: 5px;
-  opacity: 0;
-  //transition: opacity 0.5s ease;
-  width: 150px;
-  //height: 100px;
-  background: #00BC4F;
-  overflow: hidden;
-  text-align: center;
+    position: fixed;
+    top: 2%;
+    right: 45%;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    opacity: 0;
+    width: 150px;
+    background: #00bc4f;
+    overflow: hidden;
+    text-align: center;
 
-  //@media (max-width: 768px) {
-  //  width: 100px;
-  //}
+    .toast-content {
+        @include fonts.PoppinsLight;
+        color: colors.$color_white;
+        font-size: fonts.$font-size_15;
 
-  .toast-content {
-    @include fonts.PoppinsLight;
-    color: colors.$color_white;
-    font-size: fonts.$font-size_15;
-
-    @media (max-width: 768px) {
-      font-size: fonts.$font-size_12;
+        @media (max-width: 768px) {
+            font-size: fonts.$font-size_12;
+        }
     }
-  }
 
-  &.show {
-    opacity: 1;
-  }
-
-  &.hide {
-    //display: none;
-    //animation: fadeOut 0.5s ease-in-out forwards;
-  }
+    &.show {
+        opacity: 1;
+    }
 }
-
-
